fix text overflow

--- a/src/components/Card/Card.css
+++ b/src/components/Card/Card.css
@@ -46,6 +46,10 @@
 
 .card__title {
   font-size: 20px;
+  max-width: 250px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .card__image {
